grammar/grammar.js
    program: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.module_definition,
      $.type_definition,
      $.component,
      $.provider,
      $.store,
      $.suite,
      $.routes,
      $.locale,
    ),

    // ---------------------------------------------------------------------
    // Comments
    // ---------------------------------------------------------------------

    variable: _ => /[a-zA-Z][a-zA-Z0-9_]*/,

    // A possibly-dotted type identifier (`identifier_type`): `Foo`,
    // `Html.Event`. A single token. Used only in type positions and as an
    // HTML component name, where access chains are never built — so its
    // greediness over `.` is harmless here.
    id: _ => token(prec(1, /[A-Z][a-zA-Z0-9]*(\.[A-Z][a-zA-Z0-9]*)*/)),

    type_definition: $ => seq(
      'type',
      field('name', $.id),
      optional($.type_parameters),
      optional(seq(
        '{',
        choice(
          commaSep($.type_definition_field),
          repeat($.type_variant),
        ),
        '}',
      )),
      optional(seq('context', $._expression)),
    ),

    type_definition_field: $ => seq(
      field('key', $.variable),
      ':',
      field('type', choice($.type, $.variable)),
      optional(seq('using', $.string)),
    ),

    type_variant: $ => seq(
      field('name', $.id),
      optional(seq(
        '(',
        commaSep(choice(
          $.type_definition_field,
          $.variable,
          $.type,
        )),
        ')',
      )),
    ),

    type: $ => prec(1, seq(
      field('name', $.id),
      optional(seq(
        '(',
        commaSep(choice($.type, $.variable)),
        ')',
      )),
    )),

    type_annotation: $ => seq(':', choice($.type, $.variable)),

    // ---------------------------------------------------------------------
    // Modules, components, stores, providers, suites
    // ---------------------------------------------------------------------

    module_definition: $ => seq(
      'module',
      field('name', $.id),
      '{',
      repeat(choice($.function, $.constant)),
      '}',
    ),

    component: $ => seq(
      optional('global'),
      optional('async'),
      'component',
      field('name', $.id),
      '{',
      repeat(choice(
        $.property,
        $.constant,
        $.function,
        $.context,
        $.provide,
        $.connect,
        $.style,
        $.state,
        $.use,
        $.get,
      )),
      '}',
    ),

    function: $ => seq(
      'fun',
      field('name', $.variable),
      optional($.argument_list),
      optional($.type_annotation),
      field('body', $.block),
    ),

    style: $ => seq(
      'style',
      field('name', alias($._style_name, $.variable)),
      optional($.argument_list),
      '{',
      repeat($._css_node),
      '}',
    ),

    _style_name: _ => /[a-z][a-zA-Z0-9-]*/,

    block: $ => prec.right(PREC.block, seq(
      '{',
      repeat1($.statement),
      '}',
      optional($.block_fallback),
    )),

    statement: $ => prec.right(seq(
      optional(seq('let', field('target', $._destructuring), '=')),
      field('expression', $._expression),
      optional(seq('or', 'return', $._expression)),
    )),

    // ---------------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------------

    _expression: $ => choice(
      $.operation,
      $.pipe,
      $._base_expression,
    ),

    _base_expression: $ => choice(
      $.access,
      $.call,
      $.bracket_access,
      $._primary_expression,
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    number_literal: _ => token(seq(
      /\d+/,
      optional(seq('.', /\d+/)),
    )),

    access: $ => prec(PREC.chain, seq(
      field('expression', $._base_expression),
      '.',
      field('field', $.variable),
    )),

    call: $ => prec(PREC.chain, seq(
      field('expression', $._base_expression),
      $.arguments,
    )),

    arguments: $ => seq(
      '(',
      commaSep($._call_argument),
      ')',
    ),

    _call_argument: $ => choice(
      $.discard,
      $.record_field,
      $._expression,
    ),

    // ---------------------------------------------------------------------
    // Records, maps, tuples, arrays
    // ---------------------------------------------------------------------

    case: $ => seq(
      'case',
      choice(
        seq('(', field('condition', $._expression), ')'),
        field('condition', $._expression),
      ),
      '{',
      repeat($.case_branch),
      '}',
    ),

    case_branch: $ => seq(
      optional(field('patterns', sep1('|', $._destructuring))),
      '=>',
      field('body', $._expression),
    ),

    _destructuring: $ => choice(
      $.array_destructuring,
      $.record_destructuring,
      $.tuple_destructuring,
      $.type_destructuring,
      $.string,
      $.number_literal,
      $.bool_literal,
      $.variable,
      $.discard,
    ),

    type_destructuring: $ => prec(1, seq(
      field('name', $.id),
      optional(seq(
        '(',
        commaSep($._destructuring),
        ')',
      )),
    )),

    string: $ => seq(
      '"',
      repeat(choice($.string_content, $.interpolation, $.escape_sequence)),
      '"',
      // Broken strings can be continued with a backslash.
      optional(seq('\\', $.string)),
    ),

    js: $ => prec.right(seq(
      '`',
      repeat(choice($.js_content, $.interpolation)),
      '`',
      optional(seq('as', choice($.type, $.variable))),
    )),

    interpolation: $ => seq(
      '#{',
      $._expression,
      '}',
    ),

    here_document: $ => seq(
      '<<',
      choice('~', '#', '-'),
      field('token', $.variable),
      optional(seq('(', optional('highlight'), ')')),
      repeat(choice($.here_document_content, $.interpolation)),
      field('end', $.variable),
    ),

    // ---------------------------------------------------------------------
    // Misc literals
    // ---------------------------------------------------------------------

    html_element: $ => prec(PREC.html, seq(
      $._html_open,
      field('tag', alias(token.immediate(/[a-z][a-zA-Z0-9-]*/), $.html_tag)),
      repeat($.html_style),
      optional(seq('as', field('ref', $.variable))),
      repeat($.html_attribute),
      choice(
        '/>',
        seq(
          '>',
          repeat($._expression),
          field('closing_tag', $.html_closing_tag),
        ),
      ),
    )),

    // The `</tag>` that closes an HTML element. The tag name is a visible
    // `html_tag` node so it highlights like the opening tag.
    html_closing_tag: $ => seq(
      '</',
      alias(token.immediate(/[a-z][a-zA-Z0-9-]*/), $.html_tag),
      token.immediate('>'),
    ),

    html_style: $ => seq(
      '::',
      field('name', alias($._style_name, $.variable)),
      optional($.arguments),
    ),

    // ---------------------------------------------------------------------
    // CSS
    // ---------------------------------------------------------------------

    _css_node: $ => choice(
      $.css_definition,
      $.css_selector,
      $.css_nested_at,
      $.css_keyframes,
      $.css_font_face,
      $.css_case,
      $.css_if,
    ),

    css_definition: $ => seq(
      field('name', alias($._css_property_name, $.css_property)),
      ':',
      field('value', repeat1(choice(
        $.string,
        $.interpolation,
        $.css_value_content,
      ))),
      ';',
    ),

    // A CSS-context `if`: branches hold CSS definitions instead of
    // statements (`if_expression(for_css: true)` in the compiler).
    css_if: $ => prec.right(seq(
      'if',
      field('condition', choice($.statement, $._expression)),
      field('truthy', $.css_block),
      optional(seq('else', field('falsy', choice($.css_block, $.css_if)))),
    )),

    css_block: $ => seq(
      '{',
      repeat($.css_definition),
      '}',
    ),

    // A CSS-context `case`: each branch holds CSS definitions
    // (`case_expression(for_css: true)` in the compiler).
    css_case: $ => seq(
      'case',
      choice(
        seq('(', field('condition', $._expression), ')'),
        field('condition', $._expression),
      ),
      '{',
      repeat($.css_case_branch),
      '}',
    ),

    css_case_branch: $ => seq(
      optional(field('patterns', sep1('|', $._destructuring))),
      '=>',
      field('body', choice(
        $.css_block,
        repeat1($.css_definition),
      )),
    ),

    _css_property_name: _ => /[a-z-][a-zA-Z0-9-]*/,
