grammar/test/corpus/call-in-call.txt
=======================
Call in Call
=======================

module Test {
  fun call : String {
    Test.call()
  }
}

---

(program
  (module_definition
    (id)
    (function
      (variable)
      (type_annotation
        (type
          (id)))
      (block
        (statement
          (call
            (access
              (variable)
              (variable))
            (arguments)))))))
