grammar/test/corpus/type.txt
=======================
Type with type variable
=======================

module Test {
  fun type : Type(a) {
    ``
  }
}

---

(program
  (module_definition
    (id)
    (function
      (variable)
      (type_annotation
        (type
          (id)
          (variable)))
      (block
        (statement
          (js))))))
